# web/openapi.json
@@ -5,10 +5,10 @@
     "version": "0.1.0"
   },
   "paths": {
-    "/healthz": {
+    "/health": {
       "get": {
-        "summary": "Healthz",
-        "operationId": "healthz_healthz_get",
+        "summary": "Health",
+        "operationId": "health_health_get",
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -17,7 +17,7 @@
                 "schema": {
                   "additionalProperties": true,
                   "type": "object",
-                  "title": "Response Healthz Healthz Get"
+                  "title": "Response Health Health Get"
                 }
               }
             }
